Fix object browser image wrapper dimensions on Firefox
- By lowering the margin to 15px we now get 2 columns
  of items like we have in the other major browsers

--- a/packages/volto/theme/themes/pastanaga/extras/objectbrowser-widget.less
+++ b/packages/volto/theme/themes/pastanaga/extras/objectbrowser-widget.less
@@ -69,7 +69,7 @@
 
   .image-wrapper {
     display: block;
-    margin: 16px;
+    margin: 15px;
     float: left;
 
     img,
